--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@widgetbot/react-embed": "^1.4.0",
     "axios": "^0.21.1",
     "container-query-polyfill": "^0.1.2",
+    "launchdarkly-react-client-sdk": "^2.25.1",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-canvas-draw": "^1.1.1",
